Patched and added with Documentation for remaining classes